Add arrow-left-small icon

--- a/demo.html
+++ b/demo.html
@@ -492,12 +492,12 @@
                     <div class="nq-card-body icons">
                         <div class="hint" aria-label="nq-arrow-left"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-left"/></svg></div>
                         <div class="hint" aria-label="nq-arrow-right"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-right"/></svg></div>
+                        <div class="hint" aria-label="nq-arrow-left-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-left-small"/></svg></div>
                         <div class="hint" aria-label="nq-arrow-right-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-right-small"/></svg></div>
                         <div class="hint" aria-label="nq-caret-right-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-caret-right-small"/></svg></div>
                         <div class="hint" aria-label="nq-checkmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-checkmark"/></svg></div>
                         <div class="hint" aria-label="nq-download"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-download"/></svg></div>
                         <div class="hint" aria-label="nq-transfer"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-transfer"/></svg></div>
-                        <div class="hint" aria-label="nq-questionmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-questionmark"/></svg></div>
                         <br/>
                         <div class="hint" aria-label="nq-close"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-close"/></svg></div>
                         <div class="hint" aria-label="nq-info-circle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-info-circle"/></svg></div>
@@ -525,17 +525,18 @@
                         <div class="hint" aria-label="nq-settings"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-settings"/></svg></div>
                         <br/>
                         <div class="hint" aria-label="nq-ledger"><svg class="nq-icon ledger"><use xlink:href="./nimiq-style.icons.svg#nq-ledger"/></svg></div>
+                        <div class="hint" aria-label="nq-questionmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-questionmark"/></svg></div>
                     </div>
 
                     <div class="nq-card-body nq-blue-bg icons">
                         <div class="hint" aria-label="nq-arrow-left"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-left"/></svg></div>
                         <div class="hint" aria-label="nq-arrow-right"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-right"/></svg></div>
+                        <div class="hint" aria-label="nq-arrow-left-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-left-small"/></svg></div>
                         <div class="hint" aria-label="nq-arrow-right-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-right-small"/></svg></div>
                         <div class="hint" aria-label="nq-caret-right-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-caret-right-small"/></svg></div>
                         <div class="hint" aria-label="nq-checkmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-checkmark"/></svg></div>
                         <div class="hint" aria-label="nq-download"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-download"/></svg></div>
                         <div class="hint" aria-label="nq-transfer"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-transfer"/></svg></div>
-                        <div class="hint" aria-label="nq-questionmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-questionmark"/></svg></div>
                         <br/>
                         <div class="hint" aria-label="nq-close"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-close"/></svg></div>
                         <div class="hint" aria-label="nq-info-circle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-info-circle"/></svg></div>
@@ -563,6 +564,7 @@
                         <div class="hint" aria-label="nq-settings"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-settings"/></svg></div>
                         <br/>
                         <div class="hint" aria-label="nq-ledger"><svg class="nq-icon ledger"><use xlink:href="./nimiq-style.icons.svg#nq-ledger"/></svg></div>
+                        <div class="hint" aria-label="nq-questionmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-questionmark"/></svg></div>
                     </div>
                 </div>
             </div><!-- #cards -->
