Put color names in bg-color boxes in demo

--- a/demo.html
+++ b/demo.html
@@ -322,56 +322,56 @@
 
                     <div class="nq-card-body background-colors">
                         <div class="color-swatch nq-blue-bg">
-                            Text on colored background is white.
+                            Blue<br><br><br>
                         </div>
 
                         <div class="color-swatch nq-light-blue-bg">
-                            Text on colored background is white.
+                            Light-Blue<br><br><br>
                         </div>
 
                         <div class="color-swatch nq-gold-bg">
-                            Text on colored background is white.
+                            Gold<br><br><br>
                         </div>
 
                         <div class="color-swatch nq-green-bg">
-                            Text on colored background is white.
+                            Green<br><br><br>
                         </div>
 
                         <div class="color-swatch nq-orange-bg">
-                            Text on colored background is white.
+                            Orange<br><br><br>
                         </div>
 
                         <div class="color-swatch nq-red-bg">
-                            Text on colored background is white.
+                            Red<br><br><br>
                         </div>
 
                         <div class="color-swatch nq-purple-bg">
-                            Text on colored background is white.
+                            Purple<br><br><br>
                         </div>
 
                         <div class="color-swatch nq-pink-bg">
-                            Text on colored background is white.
+                            Pink<br><br><br>
                         </div>
 
                         <div class="color-swatch nq-light-green-bg">
-                            Text on colored background is white.
+                            Light-Green<br><br><br>
                         </div>
 
                         <div class="color-swatch nq-brown-bg">
-                            Text on colored background is white.
+                            Brown<br><br><br>
                         </div>
                     </div>
 
-                    <div class="code">&lt;div class="<b>nq-blue-bg</b>">Nimiq Blue&lt;/div>
-&lt;div class="<b>nq-light-blue-bg</b>">Nimiq Light Blue&lt;/div>
-&lt;div class="<b>nq-gold-bg</b>">Nimiq Gold&lt;/div>
-&lt;div class="<b>nq-green-bg</b>">Nimiq Green&lt;/div>
-&lt;div class="<b>nq-orange-bg</b>">Nimiq Orange&lt;/div>
-&lt;div class="<b>nq-red-bg</b>">Nimiq Red&lt;/div>
-&lt;div class="<b>nq-purple-bg</b>">Nimiq Purple&lt;/div>
-&lt;div class="<b>nq-pink-bg</b>">Nimiq Pink&lt;/div>
-&lt;div class="<b>nq-light-green-bg</b>">Nimiq Light Green&lt;/div>
-&lt;div class="<b>nq-brown-bg</b>">Nimiq Brown&lt;/div></div>
+                    <div class="code">&lt;div class="<b>nq-blue-bg</b>">Blue&lt;/div>
+&lt;div class="<b>nq-light-blue-bg</b>">Light-Blue&lt;/div>
+&lt;div class="<b>nq-gold-bg</b>">Gold&lt;/div>
+&lt;div class="<b>nq-green-bg</b>">Green&lt;/div>
+&lt;div class="<b>nq-orange-bg</b>">Orange&lt;/div>
+&lt;div class="<b>nq-red-bg</b>">Red&lt;/div>
+&lt;div class="<b>nq-purple-bg</b>">Purple&lt;/div>
+&lt;div class="<b>nq-pink-bg</b>">Pink&lt;/div>
+&lt;div class="<b>nq-light-green-bg</b>">Light-Green&lt;/div>
+&lt;div class="<b>nq-brown-bg</b>">Brown&lt;/div></div>
                 </div>
 
                 <div class="nq-card" id="primary-buttons">
