Fix disabled styles for nq-button

--- a/demo.html
+++ b/demo.html
@@ -383,14 +383,19 @@
                         <button class="nq-button">Regular button</button>
                         <button class="nq-button">Button with lots of text</button>
                         <button class="nq-button" disabled>Disabled button</button>
-                        <button class="nq-button inverse">Inverse button</button>
+                        <div style="padding: 2rem; border-radius: 1rem;" class="nq-light-blue-bg">
+                            <button class="nq-button light-blue inverse">Inverse button</button>
+                            <button class="nq-button light-blue inverse" disabled>Inverse disabled</button>
+                        </div>
                     </div>
 
                     <div class="code">&lt;button class="<b>nq-button</b>">Min width&lt;/button>
 &lt;button class="<b>nq-button</b>">Regular button&lt;/button>
 &lt;button class="<b>nq-button</b>">Button with lots of text&lt;/button>
 &lt;button class="<b>nq-button</b>" <b>disabled</b>>Disabled button&lt;/button>
-&lt;button class="<b>nq-button inverse</b>">Inverse button&lt;/button></div>
+
+&lt;button class="<b>nq-button inverse</b>">Inverse button&lt;/button>
+&lt;button class="<b>nq-button inverse</b>" <b>disabled</b>>Inverse button&lt;/button></div>
 
                     <div class="nq-card-body primary-buttons">
                         <button class="nq-button light-blue">Light-blue button</button>
@@ -417,7 +422,11 @@
                         <button class="nq-button-s light-blue">Light-blue button</button>
                         <button class="nq-button-s green">Green button</button>
                         <button class="nq-button-s orange">Orange button</button>
-                        <button class="nq-button-s red">Red button</button>
+                        <button class="nq-button-s red">Red button</button><br>
+                        <button class="nq-button-s light-blue" disabled>Light-blue button</button>
+                        <button class="nq-button-s green" disabled>Green button</button>
+                        <button class="nq-button-s orange" disabled>Orange button</button>
+                        <button class="nq-button-s red" disabled>Red button</button>
                     </div>
 
                     <div class="code">&lt;button class="<b>nq-button-s</b>">Small button&lt;/button>
@@ -426,7 +435,12 @@
 &lt;button class="<b>nq-button-s light-blue</b>">Light-blue button&lt;/button>
 &lt;button class="<b>nq-button-s green</b>">Green button&lt;/button>
 &lt;button class="<b>nq-button-s orange</b>">Orange button&lt;/button>
-&lt;button class="<b>nq-button-s red</b>">Red button&lt;/button></div>
+&lt;button class="<b>nq-button-s red</b>">Red button&lt;/button>
+
+&lt;button class="<b>nq-button-s light-blue</b>" <b>disabled</b>>Light-blue button&lt;/button>
+&lt;button class="<b>nq-button-s green</b>" <b>disabled</b>>Green button&lt;/button>
+&lt;button class="<b>nq-button-s orange</b>" <b>disabled</b>>Orange button&lt;/button>
+&lt;button class="<b>nq-button-s red</b>" <b>disabled</b>>Red button&lt;/button></div>
                 </div><!-- .nq-card -->
 
                 <div class="nq-card" id="card-component">
