--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Nimiq Style Overview</title>
+        <link rel="icon" href="./favicon.ico">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli:400,600,700">
         <link rel="stylesheet" href="./src/main.css">
         <link rel="stylesheet" href="./src/icons.css">
