Add input field styles, extract dark-style-adaptions into own file

--- a/demo.html
+++ b/demo.html
@@ -242,6 +242,7 @@
                     <li><a class="nq-link" href="#colors">Colors</a></li>
                     <li><a class="nq-link" href="#primary-buttons">Primary Buttons</a></li>
                     <li><a class="nq-link" href="#small-buttons">Small Buttons</a></li>
+                    <li><a class="nq-link" href="#inputs">Inputs</a></li>
                     <li><a class="nq-link" href="#card-component">Card Component</a></li>
                     <li><a class="nq-link" href="#icons">Icons</a></li>
                 </ul>
@@ -453,6 +454,57 @@
 &lt;button class="<b>nq-button-s orange</b>" <b>disabled</b>>Orange button&lt;/button>
 &lt;button class="<b>nq-button-s red</b>" <b>disabled</b>>Red button&lt;/button></div>
                 </div><!-- .nq-card -->
+
+                <div class="nq-card" id="inputs">
+                        <div class="nq-card-header">
+                            <h1 class="nq-h1"><a href="#inputs">Inputs</a></h1>
+                        </div>
+                        <div class="nq-card-body">
+                            <h2 class="nq-h2">Regular</h2>
+                            <input class="nq-input"><br>
+                            <br>
+                            <input class="nq-input" placeholder="I am a placeholder..."><br>
+                            <br>
+                            <input class="nq-input" value="I have a value" placeholder="...and placeholder, too!"><br>
+                            <br>
+                            <h2 class="nq-h2">Without border (vanishing)</h2>
+                            <input class="nq-input vanishing" placeholder="I am a placeholder..."><br>
+                            <br>
+                            <input class="nq-input vanishing" value="I have a value" placeholder="...and placeholder, too!">
+                        </div>
+
+                        <div class="code">&lt;input class="<b>nq-input</b>">
+&lt;input class="<b>nq-input</b>" placeholder="I am a placeholder...">
+&lt;input class="<b>nq-input</b>" value="I have a value">
+
+&lt;input class="<b>nq-input vanishing</b>" placeholder="I am a placeholder...">
+&lt;input class="<b>nq-input vanishing</b>" value="I have a value">
+                        </div>
+
+                        <div class="nq-card-body">
+                            <div class="nq-blue-bg rounded-padding">
+                                <h2 class="nq-h2">On dark background</h2>
+                                <input class="nq-input"><br>
+                                <br>
+                                <input class="nq-input" placeholder="I am a placeholder..."><br>
+                                <br>
+                                <input class="nq-input" value="I have a value" placeholder="...and placeholder, too!"><br>
+                                <br>
+                                <h2 class="nq-h2">Without border (vanishing)</h2>
+                                <input class="nq-input vanishing" placeholder="I am a placeholder..."><br>
+                                <br>
+                                <input class="nq-input vanishing" value="I have a value" placeholder="...and placeholder, too!">
+                            </div>
+                        </div>
+
+                        <div class="code">&lt;input class="<b>nq-input</b>">
+&lt;input class="<b>nq-input</b>" placeholder="I am a placeholder...">
+&lt;input class="<b>nq-input</b>" value="I have a value">
+
+&lt;input class="<b>nq-input vanishing</b>" placeholder="I am a placeholder...">
+&lt;input class="<b>nq-input vanishing</b>" value="I have a value">
+                        </div>
+                    </div><!-- .nq-card -->
 
                 <div class="nq-card" id="card-component">
                     <div class="nq-card-header">
