--- a/demo.html
+++ b/demo.html
@@ -283,6 +283,8 @@
 
                         <span class="nq-label">Label</span>
 
+                        <p class="nq-warning">Warning text.</p>
+
                         <div class="nq-style">
                             <h2>Tip:</h2>
                             <p>You can also add the <strong>nq-style</strong> class to a container element to automatically apply heading, paragraph, link and list styles to its contents.</p>
@@ -296,6 +298,7 @@
 &lt;a class="<b>nq-link</b>">I am a link&lt;/a>
 &lt;p class="<b>nq-text-s</b>">This is small text.&lt;/p>
 &lt;span class="<b>nq-label</b>">Label&lt;/span>
+&lt;p class="<b>nq-warning</b>">Warning text.&lt;/p>
 &lt;div class="<b>nq-style</b>">...&lt;/div></div>
                 </div>
 
@@ -514,6 +517,7 @@
                         <div class="nq-card">
                             <div class="nq-card-header">
                                 <h1 class="nq-h1">Card Header</h1>
+                                <p class="nq-warning">Warning under the headline.</p>
                             </div>
                             <div class="nq-card-body">
                                 <p class="nq-text">Card Body</p>
@@ -536,6 +540,7 @@
                     <div class="code">&lt;div class="<b>nq-card</b>">
     &lt;div class="<b>nq-card-header</b>">
         &lt;h1 class="<b>nq-h1</b>">Card Header&lt;/h1>
+        &lt;p class="<b>nq-warning</b>">Warning under the headline.&lt;/p>
     &lt;/div>
     &lt;div class="<b>nq-card-body</b>">
         &lt;p>Card Body&lt;/p>
