Refactor .nq-warning into .nq-notice.warning
And add .info, .success and .error modifiers.

--- a/demo.html
+++ b/demo.html
@@ -283,7 +283,10 @@
 
                         <span class="nq-label">Label</span>
 
-                        <p class="nq-warning">Warning text.</p>
+                        <p class="nq-notice info">Info notice.</p>
+                        <p class="nq-notice success">Success notice.</p>
+                        <p class="nq-notice warning">Warning notice.</p>
+                        <p class="nq-notice error">Error notice.</p>
 
                         <div class="nq-style">
                             <h2>Tip:</h2>
@@ -298,7 +301,10 @@
 &lt;a class="<b>nq-link</b>">I am a link&lt;/a>
 &lt;p class="<b>nq-text-s</b>">This is small text.&lt;/p>
 &lt;span class="<b>nq-label</b>">Label&lt;/span>
-&lt;p class="<b>nq-warning</b>">Warning text.&lt;/p>
+&lt;p class="<b>nq-notice info</b>">Info notice.&lt;/p>
+&lt;p class="<b>nq-notice success</b>">Success notice.&lt;/p>
+&lt;p class="<b>nq-notice warning</b>">Warning notice.&lt;/p>
+&lt;p class="<b>nq-notice error</b>">Error notice.&lt;/p>
 &lt;div class="<b>nq-style</b>">...&lt;/div></div>
                 </div>
 
@@ -517,7 +523,7 @@
                         <div class="nq-card">
                             <div class="nq-card-header">
                                 <h1 class="nq-h1">Card Header</h1>
-                                <p class="nq-warning">Warning under the headline.</p>
+                                <p class="nq-notice warning">Warning under the headline.</p>
                             </div>
                             <div class="nq-card-body">
                                 <p class="nq-text">Card Body</p>
@@ -540,7 +546,7 @@
                     <div class="code">&lt;div class="<b>nq-card</b>">
     &lt;div class="<b>nq-card-header</b>">
         &lt;h1 class="<b>nq-h1</b>">Card Header&lt;/h1>
-        &lt;p class="<b>nq-warning</b>">Warning under the headline.&lt;/p>
+        &lt;p class="<b>nq-notice warning</b>">Warning under the headline.&lt;/p>
     &lt;/div>
     &lt;div class="<b>nq-card-body</b>">
         &lt;p>Card Body&lt;/p>
