Add alert-triangle, gear and menu-dots icons

--- a/demo.html
+++ b/demo.html
@@ -612,8 +612,11 @@
                         <div class="hint" aria-label="nq-shredder"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-shredder"/></svg></div>
                         <div class="hint" aria-label="nq-settings"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-settings"/></svg></div>
                         <br/>
-                        <div class="hint" aria-label="nq-ledger"><svg class="nq-icon ledger"><use xlink:href="./nimiq-style.icons.svg#nq-ledger"/></svg></div>
+                        <div class="hint" aria-label="nq-alert-triangle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-alert-triangle"/></svg></div>
+                        <div class="hint" aria-label="nq-gear"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-gear"/></svg></div>
+                        <div class="hint" aria-label="nq-menu-dots"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-menu-dots"/></svg></div>
                         <div class="hint" aria-label="nq-questionmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-questionmark"/></svg></div>
+                        <div class="hint" aria-label="nq-ledger"><svg class="nq-icon ledger"><use xlink:href="./nimiq-style.icons.svg#nq-ledger"/></svg></div>
                     </div>
 
                     <div class="nq-card-body nq-blue-bg icons">
@@ -651,8 +654,11 @@
                         <div class="hint" aria-label="nq-shredder"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-shredder"/></svg></div>
                         <div class="hint" aria-label="nq-settings"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-settings"/></svg></div>
                         <br/>
-                        <div class="hint" aria-label="nq-ledger"><svg class="nq-icon ledger"><use xlink:href="./nimiq-style.icons.svg#nq-ledger"/></svg></div>
+                        <div class="hint" aria-label="nq-alert-triangle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-alert-triangle"/></svg></div>
+                        <div class="hint" aria-label="nq-gear"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-gear"/></svg></div>
+                        <div class="hint" aria-label="nq-menu-dots"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-menu-dots"/></svg></div>
                         <div class="hint" aria-label="nq-questionmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-questionmark"/></svg></div>
+                        <div class="hint" aria-label="nq-ledger"><svg class="nq-icon ledger"><use xlink:href="./nimiq-style.icons.svg#nq-ledger"/></svg></div>
                     </div>
                 </div>
             </div><!-- #cards -->
